--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <version>2.9.8</version>
         </dependency>
 
+        <!-- gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
